[gd_scene load_steps=45 format=3 uid="uid://cjrk7sj67hipw"]

[ext_resource type="Script" uid="uid://d03245vtt2nj8" path="res://Scripts/Autoload/game_manager.gd" id="1_menhw"]
[ext_resource type="Texture2D" uid="uid://clquarihnko0u" path="res://Assets/Sprites/UI/Messages/YI1 A.png" id="2_vm6vc"]
[ext_resource type="FontFile" uid="uid://bnrj0qwi0uol4" path="res://Assets/Sprites/UI/GoldFont.png" id="4_a2w77"]
[ext_resource type="PackedScene" uid="uid://bks21whts2vvh" path="res://Instances/UI/speedrun_timer.tscn" id="6_25a6y"]
[ext_resource type="Texture2D" uid="uid://bcvnavba5hwa7" path="res://Assets/Sprites/Map/MapSprites/MapArrow.png" id="8_8oqj1"]
[ext_resource type="Texture2D" uid="uid://w073ewfdq4j3" path="res://Assets/Sprites/UI/MobileStartSelect.png" id="8_a24db"]
[ext_resource type="Texture2D" uid="uid://cg68nbu14k0sx" path="res://Assets/Sprites/UI/MobileArrow.png" id="8_a30jm"]
[ext_resource type="FontFile" uid="uid://bhqyq3yxbvqkd" path="res://Assets/Sprites/UI/HUD/HUDFont.png" id="8_yha2h"]
[ext_resource type="Texture2D" uid="uid://cax2umwsbojvj" path="res://Assets/Sprites/UI/MobileABXY.png" id="9_5863a"]
[ext_resource type="PackedScene" uid="uid://bdwod2eetvwea" path="res://Instances/UI/course_clear.tscn" id="20_aa66g"]
[ext_resource type="Texture2D" uid="uid://366jnmfg8vjg" path="res://Assets/Sprites/UI/GameOver.png" id="21_lfatl"]

[sub_resource type="Animation" id="Animation_upxee"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Game:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-32, 135)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Over:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(497, 135)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TimeOut:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_2ven4"]
resource_name = "Show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Game:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-32, 135), Vector2(216, 135)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Over:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(497, 135), Vector2(264, 135)]
}

[sub_resource type="Animation" id="Animation_bkgnq"]
resource_name = "Timeout"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TimeOut:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l5sdu"]
_data = {
&"RESET": SubResource("Animation_upxee"),
&"Show": SubResource("Animation_2ven4"),
&"Timeout": SubResource("Animation_bkgnq")
}

[sub_resource type="Shader" id="Shader_krkh3"]
code = "shader_type canvas_item;

void vertex() {
	// Called for every vertex the material is visible on.
}

void fragment() {
	// Called for every pixel the material is visible on.
}

//void light() {
	// Called for every pixel for every light affecting the CanvasItem.
	// Uncomment to replace the default light processing function with this one.
//}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_usxvh"]
shader = SubResource("Shader_krkh3")

[sub_resource type="FontVariation" id="FontVariation_2yt5w"]
base_font = ExtResource("4_a2w77")
spacing_glyph = -8

[sub_resource type="Shader" id="Shader_xm74j"]
code = "shader_type canvas_item;
render_mode unshaded;

uniform float circle_size : hint_range(0.0, 1.05);
uniform float screen_width;
uniform float screen_height;

void fragment() {
	float ratio = screen_width / screen_height;
	float dist = distance(vec2(0.5, 0.5), vec2(mix(0.5, UV.x, ratio), UV.y));
	COLOR.a = step(circle_size, dist);
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7ngb7"]
shader = SubResource("Shader_xm74j")
shader_parameter/circle_size = 1.05
shader_parameter/screen_width = 480.0
shader_parameter/screen_height = 270.0

[sub_resource type="Animation" id="Animation_l6cnr"]
resource_name = "Close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/circle_size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.05, 0.0]
}

[sub_resource type="Animation" id="Animation_ol46f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/circle_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.05]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ek5yi"]
_data = {
&"Close": SubResource("Animation_l6cnr"),
&"RESET": SubResource("Animation_ol46f")
}

[sub_resource type="Animation" id="Animation_abcuy"]
resource_name = "Appear"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Message:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_pvref"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Message:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tv14v"]
_data = {
&"Appear": SubResource("Animation_abcuy"),
&"RESET": SubResource("Animation_pvref")
}

[sub_resource type="Animation" id="Animation_kxkp1"]
resource_name = "Appear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.833333, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_pkpkx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3lsjg"]
_data = {
&"Appear": SubResource("Animation_kxkp1"),
&"RESET": SubResource("Animation_pkpkx")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ctdmb"]
size = Vector2(47, 57)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6xvf"]
atlas = ExtResource("9_5863a")
region = Rect2(0, 0, 47, 47)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8oqj1"]
size = Vector2(47, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_um8iv"]
atlas = ExtResource("9_5863a")
region = Rect2(47, 0, 47, 47)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a24db"]
size = Vector2(47, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_ky2dh"]
atlas = ExtResource("9_5863a")
region = Rect2(0, 47, 47, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rtlf"]
atlas = ExtResource("9_5863a")
region = Rect2(47, 47, 47, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_7bmmb"]
atlas = ExtResource("8_a24db")
region = Rect2(0, 0, 32, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7bmmb"]
size = Vector2(32, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_a24db"]
atlas = ExtResource("8_a24db")
region = Rect2(0, 8, 32, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a30jm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1bkjq"]
atlas = ExtResource("9_5863a")
region = Rect2(0, 47, 47, 47)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5863a"]
size = Vector2(47, 47)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c6xvf"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_um8iv"]
size = Vector2(10, 10)

[node name="GameManager" type="Node"]
process_mode = 3
script = ExtResource("1_menhw")

[node name="UI" type="CanvasLayer" parent="."]
layer = 5

[node name="CourseClear" parent="UI" instance=ExtResource("20_aa66g")]
auto_translate_mode = 1

[node name="GameOverText" type="Node" parent="UI"]

[node name="Game" type="Sprite2D" parent="UI/GameOverText"]
z_index = 4096
z_as_relative = false
position = Vector2(-32, 135)
texture = ExtResource("21_lfatl")
vframes = 2

[node name="Over" type="Sprite2D" parent="UI/GameOverText"]
z_index = 4096
z_as_relative = false
position = Vector2(497, 135)
texture = ExtResource("21_lfatl")
vframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/GameOverText"]
libraries = {
&"": SubResource("AnimationLibrary_l5sdu")
}

[node name="ColorRect" type="ColorRect" parent="UI/GameOverText"]
material = SubResource("ShaderMaterial_usxvh")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="TimeOut" type="Label" parent="UI/GameOverText"]
visible = false
z_index = 14
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -8.0
offset_right = 32.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("FontVariation_2yt5w")
text = "time out!"
uppercase = true

[node name="CircleClose" type="ColorRect" parent="UI"]
material = SubResource("ShaderMaterial_7ngb7")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Animations" type="AnimationPlayer" parent="UI/CircleClose"]
libraries = {
&"": SubResource("AnimationLibrary_ek5yi")
}

[node name="Message" type="CenterContainer" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = 83.0
offset_right = 40.0
offset_bottom = 123.0
grow_horizontal = 2
scale = Vector2(1e-05, 1e-05)
mouse_filter = 2
use_top_left = true

[node name="MessageRect" type="TextureRect" parent="UI/Message"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_vm6vc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/Message"]
root_node = NodePath("../../..")
libraries = {
&"": SubResource("AnimationLibrary_tv14v")
}

[node name="SavingText" type="Label" parent="UI"]
modulate = Color(1, 1, 1, 0)
z_index = 4096
z_as_relative = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -72.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("8_yha2h")
text = "Saving..."
vertical_alignment = 1
uppercase = true

[node name="Animation" type="AnimationPlayer" parent="UI/SavingText"]
libraries = {
&"": SubResource("AnimationLibrary_3lsjg")
}

[node name="SpeedrunTimer" parent="UI" instance=ExtResource("6_25a6y")]
offset_left = -128.0
offset_top = -38.0

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Mobile" type="CanvasLayer" parent="."]
layer = 128

[node name="DPAD" type="Node" parent="Mobile"]

[node name="Up" type="TouchScreenButton" parent="Mobile/DPAD"]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(47, 129)
texture_normal = ExtResource("8_a30jm")
shape = SubResource("RectangleShape2D_ctdmb")
passby_press = true
action = "move_up_0"
visibility_mode = 1

[node name="Left" type="TouchScreenButton" parent="Mobile/DPAD"]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(0, 224)
rotation = -1.5708
texture_normal = ExtResource("8_a30jm")
shape = SubResource("RectangleShape2D_ctdmb")
passby_press = true
action = "move_left_0"
visibility_mode = 1

[node name="Down" type="TouchScreenButton" parent="Mobile/DPAD"]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(94, 270)
rotation = -3.14159
texture_normal = ExtResource("8_a30jm")
shape = SubResource("RectangleShape2D_ctdmb")
passby_press = true
action = "move_down_0"
visibility_mode = 1

[node name="Right" type="TouchScreenButton" parent="Mobile/DPAD"]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(141, 176)
rotation = 1.5708
texture_normal = ExtResource("8_a30jm")
shape = SubResource("RectangleShape2D_ctdmb")
passby_press = true
action = "move_right_0"
visibility_mode = 1

[node name="ABXY" type="Node" parent="Mobile"]

[node name="A" type="TouchScreenButton" parent="Mobile/ABXY"]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(386, 207)
texture_normal = SubResource("AtlasTexture_c6xvf")
shape = SubResource("RectangleShape2D_8oqj1")
passby_press = true
action = "jump_0"
visibility_mode = 1

[node name="B" type="TouchScreenButton" parent="Mobile/ABXY"]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(424, 159)
texture_normal = SubResource("AtlasTexture_um8iv")
shape = SubResource("RectangleShape2D_a24db")
passby_press = true
action = "spin_jump_0"
visibility_mode = 1

[node name="X" type="TouchScreenButton" parent="Mobile/ABXY"]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(349, 159)
texture_normal = SubResource("AtlasTexture_ky2dh")
shape = SubResource("RectangleShape2D_a24db")
passby_press = true
action = "run_0"
visibility_mode = 1

[node name="Y" type="TouchScreenButton" parent="Mobile/ABXY"]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(386, 112)
texture_normal = SubResource("AtlasTexture_6rtlf")
shape = SubResource("RectangleShape2D_a24db")
passby_press = true
action = "dive_0"
visibility_mode = 1

[node name="Misc" type="Node" parent="Mobile"]

[node name="Start" type="TouchScreenButton" parent="Mobile/Misc"]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(267, 0)
scale = Vector2(3, 3)
texture_normal = SubResource("AtlasTexture_7bmmb")
shape = SubResource("RectangleShape2D_7bmmb")
action = "pause"
visibility_mode = 1

[node name="Select" type="TouchScreenButton" parent="Mobile/Misc"]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(115, 0)
scale = Vector2(3, 3)
texture_normal = SubResource("AtlasTexture_a24db")
shape = SubResource("RectangleShape2D_7bmmb")
action = "open_progress"
visibility_mode = 1

[node name="DropItem" type="TouchScreenButton" parent="Mobile/Misc"]
position = Vector2(240, 12)
shape = SubResource("RectangleShape2D_a30jm")
action = "open_inventory"
visibility_mode = 1

[node name="RunToggle" type="TouchScreenButton" parent="Mobile/Misc"]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(373, 49)
texture_normal = SubResource("AtlasTexture_1bkjq")
shape = SubResource("RectangleShape2D_5863a")

[node name="LeftPage" type="TouchScreenButton" parent="Mobile/Misc"]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(20, 47)
rotation = 1.5708
scale = Vector2(2, 2)
texture_normal = ExtResource("8_8oqj1")
shape = SubResource("RectangleShape2D_c6xvf")
action = "ui_tab_left"

[node name="RightPage" type="TouchScreenButton" parent="Mobile/Misc"]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(460, 66)
rotation = -1.5708
scale = Vector2(2, 2)
texture_normal = ExtResource("8_8oqj1")
shape = SubResource("RectangleShape2D_um8iv")
action = "ui_tab_right"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Mobile/DPAD/Up" to="." method="_on_up_pressed"]
[connection signal="released" from="Mobile/DPAD/Up" to="." method="_on_up_released"]
[connection signal="pressed" from="Mobile/DPAD/Left" to="." method="_on_left_pressed"]
[connection signal="released" from="Mobile/DPAD/Left" to="." method="_on_left_released"]
[connection signal="pressed" from="Mobile/DPAD/Down" to="." method="_on_down_pressed"]
[connection signal="released" from="Mobile/DPAD/Down" to="." method="_on_down_released"]
[connection signal="pressed" from="Mobile/DPAD/Right" to="." method="_on_right_pressed"]
[connection signal="released" from="Mobile/DPAD/Right" to="." method="_on_right_released"]
[connection signal="pressed" from="Mobile/ABXY/A" to="." method="_on_a_pressed"]
[connection signal="released" from="Mobile/ABXY/A" to="." method="_on_a_released"]
[connection signal="pressed" from="Mobile/ABXY/B" to="." method="_on_b_pressed"]
[connection signal="released" from="Mobile/ABXY/B" to="." method="_on_b_released"]
[connection signal="pressed" from="Mobile/ABXY/X" to="." method="_on_x_pressed"]
[connection signal="released" from="Mobile/ABXY/X" to="." method="_on_x_released"]
[connection signal="pressed" from="Mobile/ABXY/Y" to="." method="_on_y_pressed"]
[connection signal="released" from="Mobile/ABXY/Y" to="." method="_on_y_released"]
[connection signal="pressed" from="Mobile/Misc/Start" to="." method="_on_start_pressed"]
[connection signal="released" from="Mobile/Misc/Start" to="." method="_on_start_released"]
[connection signal="pressed" from="Mobile/Misc/RunToggle" to="." method="_on_check_box_toggled"]
